--- a/.gitignore
+++ b/.gitignore
@@ -302,6 +302,7 @@ nordpool.json
 washee_app/.env.dev
 washee_app/.env.prod
 washee_app/.env.prod_real
+washee_app/.env1.prod
 
 # Hide the certbot used to verify https connection
 nginx/certbot
