--- a/.github/workflows/box-ci.yml
+++ b/.github/workflows/box-ci.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Run linter before running tests
+        uses: py-actions/flake8@v2
       - name: Build, run, test and tear down
         run: |
           docker-compose up -d --build box
