--- a/.github/workflows/labels-on-pr.yml
+++ b/.github/workflows/labels-on-pr.yml
@@ -8,11 +8,16 @@ env:
   BASE_BRANCH: ${{ github.base_ref }}
 
 jobs:
-  add-initial-labels:
+  add-initial-increment-label:
     runs-on: ubuntu-latest
     steps:
       - name: add default labels to pull request
         uses: actions-ecosystem/action-add-labels@v1
         with:
           github_token: ${{ github.token }}
-          labels: Increment, WIP
+          labels: Increment
+      - name: add default labels to pull request
+        uses: actions-ecosystem/action-add-labels@v1
+        with:
+          github_token: ${{ github.token }}
+          labels: Need Tests
