--- a/.github/workflows/mobile-ci.yml
+++ b/.github/workflows/mobile-ci.yml
@@ -21,8 +21,8 @@ jobs:
     # Setup the flutter environment.
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'stable' # 'dev', 'alpha', default to: 'stable'
-        # flutter-version: '1.12.x' # you can also specify exact version of flutter
+        channel: '2.10.5' # 'dev', 'alpha', or 'stable' default to: 'stable'
+        # Set to the same version as used by MartinBruun for now
     
     - name: Run flutter commands
       working-directory: ./washee_app
