Add coverage testing

--- a/washee_web/requirements.txt
+++ b/washee_web/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.9.3
 atomicwrites==1.4.0
 attrs==21.4.0
 colorama==0.4.4
+coverage==6.4
 Django==3.2.13
 django-admin-honeypot==1.1.0
 django-cors-headers==3.11.0
@@ -23,6 +24,7 @@ psycopg2-binary==2.9.1
 py==1.11.0
 pyparsing==3.0.7
 pytest==7.0.1
+pytest-cov==3.0.0
 pytest-django==4.5.2
 pytest-dotenv==0.5.2
 pytest-mock==3.7.0
