--- a/.github/workflows/mobile-ci.yml
+++ b/.github/workflows/mobile-ci.yml
@@ -24,7 +24,7 @@ jobs:
         channel: 'stable' # 'dev', 'alpha', or 'stable' default to: 'stable'
         flutter-version: '2.10.5' # set to the flutter version of MartinBruun due to previous errors
     
-    - name: Run flutter commands
+    - name: Setup necessary environment files
       working-directory: ./washee_app
       run: |
         echo "WEB_API_HOST=http://localhost:8000" > .env.dev
@@ -33,9 +33,28 @@ jobs:
         echo "BOX_WIFI_PASSWORD=boxNetworkPassword" >> .env.dev
         echo "BOX_HAS_INTERNET=true" >> .env.dev
         echo "Necessary production environment to satisfy flutter assets" > .env.prod
+
+    - name: Run flutter tests and check for minimum coverage afterwards
+      working-directory: ./washee_app
+      run: |
         flutter pub get
-        flutter test
+        flutter test --coverage
+
+    - uses: VGVentures/very-good-coverage@v1.1.1
+      with:
+        working-directory: ./washee_app
+        path: "./coverage/lcov.info"
+        min_coverage: 95
+        exclude: "**/*_observer.dart **/change.dart"
+
+    - name: Build APK 
+      working-directory: ./washee_app
+      run: |
         flutter build apk --debug 
+
+      
+    
+
 
 
 
