--- a/washee_box/requirements.txt
+++ b/washee_box/requirements.txt
@@ -3,6 +3,7 @@ attrs==21.4.0
 click==8.0.4
 colorama==0.4.4
 colorzero==2.0
+coverage==6.4
 Flask==2.0.3
 gpiozero==1.6.2
 importlib-metadata==4.11.3
@@ -16,9 +17,10 @@ pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.7
 pytest==7.1.1
-pytz
+pytest-cov==3.0.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
 six==1.16.0
 tomli==2.0.1
 typing-extensions==4.1.1
