--- a/washee_app/analysis_options.yaml
+++ b/washee_app/analysis_options.yaml
@@ -1,11 +1,11 @@
 
-
 #include: package:lints/recommended.yaml
 
 analyzer:
   exclude: [build/**]
-  language:
-    brace-in-string-interps: false
+  #language:
+  #  strict-casts: true
+  #  strict-raw-types: true
 
 linter:
   rules:
