Add flake8 linting to web and setup for box ready to turn on

--- a/.github/workflows/box-ci.yml
+++ b/.github/workflows/box-ci.yml
@@ -11,6 +11,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      #- name: Check for linting before running tests
+      #  uses: py-actions/flake8@v2
+      #  with:
+      #    path: "washee_box"
+
       - name: Build, run, test and tear down
         run: |
           docker-compose up -d --build box
