--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Check for linting before running tests
+      uses: py-actions/flake8@v2
+
     - name: Build, run, test and tear down
       working-directory: ./washee_web
       run: |
