Fix all linting errors

--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    #- name: Check for linting before running tests
-    #  uses: py-actions/flake8@v2
-    #  with:
-    #      path: "washee_web"
+    - name: Check for linting before running tests
+      uses: py-actions/flake8@v2
+      with:
+          path: "washee_web"
 
     - name: Build, run, test and tear down
       working-directory: ./washee_web
