--- a/.github/workflows/box-ci.yml
+++ b/.github/workflows/box-ci.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      #- name: Check for linting before running tests
-      #  uses: py-actions/flake8@v2
-      #  with:
-      #    path: "washee_box"
+      - name: Check for linting before running tests
+        uses: py-actions/flake8@v2
+        with:
+          path: "washee_box"
 
       - name: Build, run, test and tear down
         run: |
