--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -18,6 +18,7 @@ jobs:
       uses: py-actions/flake8@v2
       with:
           path: "washee_web"
+          max-line-length: 9000
 
     - name: Build, run, test and tear down
       working-directory: ./washee_web
