Make workflows easier to change min coverage

--- a/.github/workflows/mobile-ci.yml
+++ b/.github/workflows/mobile-ci.yml
@@ -5,8 +5,10 @@ on:
     paths:
       - 'washee_app/**'
 
-jobs:
+env:
+  MIN_COVERAGE: 5
 
+jobs:
   build:
     # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
@@ -48,7 +50,7 @@ jobs:
     - uses: VGVentures/very-good-coverage@v1.1.1
       with:
         path: "./washee_app/coverage/lcov.info"
-        min_coverage: 5
+        min_coverage: $MIN_COVERAGE
         exclude: "**/*_observer.dart **/change.dart"
 
     - name: Build APK 
