--- a/.github/workflows/box-ci.yml
+++ b/.github/workflows/box-ci.yml
@@ -5,6 +5,9 @@ on:
     paths:
       - "washee_box/**"
 
+env:
+  MIN_COVERAGE: 42
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,5 +24,5 @@ jobs:
       - name: Build, run, test and tear down
         run: |
           docker-compose up -d --build box
-          docker-compose exec -T box python3 -m pytest --cov=. --cov-fail-under=42
+          docker-compose exec -T box python3 -m pytest --cov=. --cov-fail-under=$MIN_COVERAGE
           docker-compose down -v
