Add a must_pass mark to ease readability when fixtures fail

--- a/washee_box/pytest.ini
+++ b/washee_box/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 python_files = tests.py test_*.py *_tests.py *_test.py
 addopts = --ignore=env
+markers = must_pass: if this fails, skip all tests that use this fixture
