--- a/washee_web/pytest.ini
+++ b/washee_web/pytest.ini
@@ -3,3 +3,4 @@ env_files = .env.dev
 DJANGO_SETTINGS_MODULE = washee_web.settings
 python_files = tests.py test_*.py *_tests.py *_test.py
 addopts = --ignore=env
+markers = must_pass: if this fails, skip all tests that use this fixture
