Restructure to a total file, since workflow_run sadly didnt work as intended

--- a/.github/best_ci_but_not_working/mobile-ci.yml
+++ b/.github/best_ci_but_not_working/mobile-ci.yml
@@ -1,4 +1,4 @@
-name: App CI
+name: Mobile CI
 
 on:
   workflow_run:
@@ -54,7 +54,7 @@ jobs:
         min_coverage: 13
         exclude: "**/*_observer.dart **/change.dart"
 
-    - name: Run Integration Tests (which also builds an APK)
+    - name: Run Integration Tests (which also builds APK)
       working-directory: ./washee_app
       run: |
         flutter test integration_test
