--- a/.github/workflows/total-ci.yml
+++ b/.github/workflows/total-ci.yml
@@ -81,6 +81,7 @@ jobs:
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 29
+        script: ./gradlew connectedCheck
 
     - name: (App CI) Run Integration Tests (which also builds an APK)
       working-directory: ./washee_app
