retry CI specs and final removal of everything accounts, except ActiveUser, since alot depends on that

--- a/.github/workflows/total-ci.yml
+++ b/.github/workflows/total-ci.yml
@@ -77,17 +77,16 @@ jobs:
         min_coverage: 13
         exclude: "**/*_observer.dart **/change.dart"
 
-    - name: (App CI) Start an Android Emulator
+    - name: (App CI) Start an Android Emulator and Run Integration Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 29
         profile: pixel
-        script: flutter drive --target=test_driver/app.dart
-
-    - name: (App CI) Run Integration Tests (which also builds an APK)
-      working-directory: ./washee_app
-      run: |
-        flutter test integration_test
+        script: |
+          cd washee_app
+          flutter drive --target=test_driver/app.dart
+          flutter test integration_test
+          cd ..
 
     - name: (Done) Tear down
       run: |
