--- a/.github/best_ci_but_not_working/mobile-ci.yml
+++ b/.github/best_ci_but_not_working/mobile-ci.yml
@@ -53,15 +53,16 @@ jobs:
         min_coverage: 13
         exclude: "**/*_observer.dart **/change.dart"
 
-    - name: Start an Android Emulator
+    - name: Start an Android Emulator and Run Integration Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 29
-
-    - name: Run Integration Tests (which also builds APK)
-      working-directory: ./washee_app
-      run: |
-        flutter test integration_test
+        profile: pixel
+        script: |
+          cd washee_app
+          flutter drive --target=test_driver/app.dart
+          flutter test integration_test
+          cd ..
 
       
     
