--- a/.github/workflows/total-ci.yml
+++ b/.github/workflows/total-ci.yml
@@ -77,16 +77,15 @@ jobs:
         min_coverage: 13
         exclude: "**/*_observer.dart **/change.dart"
 
-    - name: (App CI) Go into washee_app directory
-      run: cd washee_app
-
     - name: (App CI) Start an Android Emulator and Run Integration Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 29
         profile: pixel
         script: |
+          cd washee_app
           flutter drive --driver=test_driver/android_driver.dart --target=integration_test/account_test.dart
+      
 
     - name: (Done) Tear down
       run: |
