--- a/.github/workflows/total-ci.yml
+++ b/.github/workflows/total-ci.yml
@@ -29,6 +29,11 @@ jobs:
       run: |
         docker-compose up -d --build
 
+  webci:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
     - name: (Web CI) Check for linting before running tests
       uses: py-actions/flake8@v2
       with:
@@ -40,6 +45,11 @@ jobs:
       run: |
         docker-compose exec -T web pytest --cov=. --cov-fail-under=$WEB_MIN_COVERAGE
 
+  boxci:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
     - name: (Box CI) Check for linting before running tests
       uses: py-actions/flake8@v2
       with:
@@ -50,6 +60,11 @@ jobs:
       run: |
         docker-compose exec -T box python3 -m pytest --cov=. --cov-fail-under=$BOX_MIN_COVERAGE
 
+  appci:
+    runs-on: macos-latest # For faster android emulation
+    needs: build
+
+    steps:
     - name: (App CI) Setup necessary environment files
       working-directory: ./washee_app
       run: |
@@ -78,14 +93,32 @@ jobs:
         min_coverage: 13
         exclude: "**/*_observer.dart **/change.dart"
 
-    #- name: (App CI) Start an Android Emulator and Run Integration Tests
-    #  uses: reactivecircus/android-emulator-runner@v2
-    #  with:
-    #    api-level: 29
-    #    profile: pixel
-    #    script: ./scripts/app/integration_test.sh
-        # NEED TO BE CHMOD +x TO WORK!!!
+    - name: (App CI) Start an Android Emulator and Run Integration Tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 29
+        profile: pixel
+        script: ./scripts/app/integration_test.sh
 
+    # INCLUDE MORE TESTS! Ie. include enough tests, so that it is certain that it is releasable (Continious Delivery goal)
+    # The test server running the pipeline should simulate a production server, for proper Communication Testing
+    # This can include: 
+      # Acceptance (testing user stories, ie. app integration tests trying to simulate a user), 
+      # Penetration, (testing abuse stories, ie. app integration tests trying to simulate a hacker),
+      # Static Linting (testing architechture constraints are upheld, taint analysis for user input, etc.)
+      # Communication (testing high level protocols between the applications, ie. http(s), CSRF, Cors, etc. )
+      # Performance (testing performance criteria for System and Critical Components)
+
+    # It should also automatically deploy to a staging server (including a "Testers App") after merge (in a seperate yaml file)
+    # The staging server should function as "the place where test users get the newest features and rapport the newest bugs"
+    # With a press of a button, the changes on staging should be deployable to production
+    
+
+  done:
+    runs-on: ubuntu-latest
+    needs: [webci, boxci, appci]
+
+    steps:
     - name: (Done) Tear down
       run: |
         docker-compose down -v
