--- a/.github/workflows/total-ci.yml
+++ b/.github/workflows/total-ci.yml
@@ -15,15 +15,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1 # For App
-      with:
-        java-version: '8.x'
-    
-    # Setup the flutter environment.
-    - uses: subosito/flutter-action@v1
-      with:
-        channel: 'stable' # 'dev', 'alpha', or 'stable' default to: 'stable'
-        flutter-version: '2.10.5' # set to the flutter version of MartinBruun due to previous errors
 
     - name: (Build) Build all
       run: |
@@ -34,6 +25,8 @@ jobs:
     needs: build
 
     steps:
+    - uses: actions/checkout@v2
+
     - name: (Web CI) Check for linting before running tests
       uses: py-actions/flake8@v2
       with:
@@ -50,6 +43,8 @@ jobs:
     needs: build
 
     steps:
+    - uses: actions/checkout@v2
+
     - name: (Box CI) Check for linting before running tests
       uses: py-actions/flake8@v2
       with:
@@ -65,6 +60,17 @@ jobs:
     needs: build
 
     steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1 # For App
+      with:
+        java-version: '8.x'
+    
+    # Setup the flutter environment.
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable' # 'dev', 'alpha', or 'stable' default to: 'stable'
+        flutter-version: '2.10.5' # set to the flutter version of MartinBruun due to previous errors
+
     - name: (App CI) Setup necessary environment files
       working-directory: ./washee_app
       run: |
