--- a/.github/workflows/total-ci.yml
+++ b/.github/workflows/total-ci.yml
@@ -56,7 +56,7 @@ jobs:
         docker-compose exec -T box python3 -m pytest --cov=. --cov-fail-under=$BOX_MIN_COVERAGE
 
   appci:
-    runs-on: macos-latest # For faster android emulation
+    runs-on: ubuntu-latest
     needs: build
 
     steps:
@@ -99,7 +99,33 @@ jobs:
         min_coverage: 13
         exclude: "**/*_observer.dart **/change.dart"
 
-    - name: (App CI) Start an Android Emulator and Run Integration Tests
+  appint:
+    runs-on: ubuntu-latest # For faster android emulation
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1 # For App
+      with:
+        java-version: '8.x'
+    
+    # Setup the flutter environment.
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable' # 'dev', 'alpha', or 'stable' default to: 'stable'
+        flutter-version: '2.10.5' # set to the flutter version of MartinBruun due to previous errors
+
+    - name: (App Int) Setup necessary environment files
+      working-directory: ./washee_app
+      run: |
+        echo "WEB_API_HOST=http://localhost:8000" > .env.dev
+        echo "BOX_API_HOST=http://localhost:8001" >> .env.dev
+        echo "BOX_WIFI_SSID=boxNetworkName" >> .env.dev
+        echo "BOX_WIFI_PASSWORD=boxNetworkPassword" >> .env.dev
+        echo "BOX_HAS_INTERNET=true" >> .env.dev
+        echo "Necessary production environment to satisfy flutter assets" > .env.prod
+
+    - name: (App Int) Start an Android Emulator and Run Integration Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 29
@@ -122,7 +148,7 @@ jobs:
 
   done:
     runs-on: ubuntu-latest
-    needs: [webci, boxci, appci]
+    needs: [webci, boxci, appci, appint]
 
     steps:
     - name: (Done) Tear down
