Try to run test again

--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -40,4 +40,4 @@ jobs:
       with:
         api-level: 29
         profile: pixel
-        script: ./scripts/app/integration_test.sh
+        script: ./integration_test.sh
