--- a/.github/workflows/total-ci.yml
+++ b/.github/workflows/total-ci.yml
@@ -1,5 +1,4 @@
 name: Total CI
-# If possible, should be replaced with the best_ci_but_not_working if possible down the line
 
 on:
   pull_request:
@@ -87,13 +86,12 @@ jobs:
     # When these tests are done, and the merge completed, the code should get loaded up to a staging server
     # The staging server should have its own .env.stage environment
 
-    # Put on hold for now. It takes 1+ hour to complete on githubs runners
-    #- name: (App Int) Start an Android Emulator and Run Integration Tests
-    #  uses: reactivecircus/android-emulator-runner@v2
-    #  with:
-    #    api-level: 29
-    #    profile: pixel
-    #    script: ./scripts/app/integration_test.sh
+    - name: (App Int) Start an Android Emulator and Run Integration Tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 29
+        profile: pixel
+        script: ./scripts/app/integration_test.sh
 
     # INCLUDE MORE TESTS! Ie. include enough tests, so that it is certain that it is releasable (Continious Delivery goal)
     # The test server running the pipeline should simulate a production server, for proper Communication Testing
