--- a/.github/workflows/2box_confidence.yml
+++ b/.github/workflows/2box_confidence.yml
@@ -8,7 +8,7 @@ on:
     paths:
       - 'washee_box/**'
   workflow_run:
-    workflows: [Build]
+    workflows: [Setup]
     types:
       - completed
 
