See if uses works for the CI flow

--- a/.github/workflows/3assurance.yml
+++ b/.github/workflows/3assurance.yml
@@ -13,37 +13,27 @@ on:
 jobs:
   assurance:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
     # SETUP
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
-    
-    - uses: subosito/flutter-action@v1
-      with:
-        channel: 'stable' # 'dev', 'alpha', or 'stable' default to: 'stable'
-        flutter-version: '2.10.5' # set to the flutter version of MartinBruun due to previous errors
-    
-    - name: Setup necessary environment files
-      working-directory: ./washee_app
-      run: |
-        echo "WEB_API_HOST=http://localhost:8000" > .env.dev
-        echo "BOX_API_HOST=http://localhost:8001" >> .env.dev
-        echo "BOX_WIFI_SSID=boxNetworkName" >> .env.dev
-        echo "BOX_WIFI_PASSWORD=boxNetworkPassword" >> .env.dev
-        echo "BOX_HAS_INTERNET=true" >> .env.dev
-        echo "Necessary production environment to satisfy flutter assets" > .env.prod
+    - uses: ./.github/workflows/setup.yml
 
     # TESTING
 
-    - name: Start an Android Emulator and Run App Integration Tests
-      uses: reactivecircus/android-emulator-runner@v2
-      with:
-        api-level: 29
-        profile: pixel
-        script: ./scripts/app/integration_test.sh
+    # THIS IS NOT WORKING as of now!
+    #- name: Start an Android Emulator and Run App Integration Tests
+    #  uses: reactivecircus/android-emulator-runner@v2
+    #  with:
+    #    api-level: 29
+    #    profile: pixel
+    #    script: ./scripts/app/integration_test.sh
+
+    # NEEDS a renaming of "integration test" to "assurance test" for app
+    # NEEDS Web Assurance test setup
+    # NEEDS Box Assurance test setup
+    # Shell scripts called "assurance_test" should hold all the logic for assuring the outcome is in a releaseable state
+    # (Releaseable state => the branch can be the new production release in under 5 seconds)
 
     - name: Finish testing and Clean Up
       run: |
