--- a/.github/workflows/2app_confidence.yml
+++ b/.github/workflows/2app_confidence.yml
@@ -18,28 +18,11 @@ env:
 jobs:
   app_confidence:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
     # SETUP
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
-    
-    - uses: subosito/flutter-action@v1
-      with:
-        channel: 'stable' # 'dev', 'alpha', or 'stable' default to: 'stable'
-        flutter-version: '2.10.5' # set to the flutter version of MartinBruun due to previous errors
-    
-    - name: Setup necessary environment files
-      working-directory: ./washee_app
-      run: |
-        echo "WEB_API_HOST=http://localhost:8000" > .env.dev
-        echo "BOX_API_HOST=http://localhost:8001" >> .env.dev
-        echo "BOX_WIFI_SSID=boxNetworkName" >> .env.dev
-        echo "BOX_WIFI_PASSWORD=boxNetworkPassword" >> .env.dev
-        echo "BOX_HAS_INTERNET=true" >> .env.dev
-        echo "Necessary production environment to satisfy flutter assets" > .env.prod
+    - uses: ./.github/workflows/setup.yml
 
     # TESTING
 
