--- a/.github/workflows/2box_confidence.yml
+++ b/.github/workflows/2box_confidence.yml
@@ -18,10 +18,11 @@ env:
 jobs:
   box_confidence:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
     # SETUP
-    - uses: actions/checkout@v2
+    - uses: ./.github/workflows/setup.yml
 
     # TESTING
 
