Add old pipeline as an insurance policy until the other works

--- a/.github/workflows/3assurance.yml
+++ b/.github/workflows/3assurance.yml
@@ -17,6 +17,8 @@ jobs:
 
     steps:
     # SETUP
+    # Should probably be changed to starting up some staging like server (making a more production like environment to make it possible to test https etc.)
+    # Works for now though!
     - uses: ./.github/workflows/setup.yml
 
     # TESTING
