--- a/.github/workflows/1app_confidence.yml
+++ b/.github/workflows/1app_confidence.yml
@@ -1,10 +1,18 @@
-name: Setup
+name: App Confidence
+
+# App confidence continious integration testing
+# Confidence testing are for getting quick feedback
 
 on:
   pull_request:
+    paths:
+      - 'washee_app/**'
+
+env:
+  MIN_COVERAGE: "Last set to 13, but don't know how to inject as environment variable"
 
 jobs:
-  setup:
+  app_confidence:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,8 +39,19 @@ jobs:
 
     # TESTING
 
-# NEEDS basic linter that makes sure the architecture is upheld
-
-    - name: Startup the containers
+    - name: Lint according to analysis_options.yaml rules
+      working-directory: ./washee_app
       run: |
-        docker-compose up -d --build
+        flutter analyze
+
+    - name: Run flutter tests and check for minimum coverage afterwards
+      working-directory: ./washee_app
+      run: |
+        flutter pub get
+        flutter test --coverage
+
+    - uses: VGVentures/very-good-coverage@v1.1.1
+      with:
+        path: "./washee_app/coverage/lcov.info"
+        min_coverage: 13
+        exclude: "**/*_observer.dart **/change.dart"
