--- a/.github/workflows/1box_confidence.yml
+++ b/.github/workflows/1box_confidence.yml
@@ -7,10 +7,6 @@ on:
   pull_request:
     paths:
       - 'washee_box/**'
-  workflow_run:
-    workflows: [Setup]
-    types:
-      - completed
 
 env:
   MIN_COVERAGE: 42
@@ -18,11 +14,14 @@ env:
 jobs:
   box_confidence:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
     # SETUP
-    - uses: ./.github/workflows/setup.yml
+    - uses: actions/checkout@v2
+
+    - name: Startup box container
+      run: |
+        docker-compose up -d --build box
 
     # TESTING
 
