Create over the top architecture check, but now its documented

--- a/washee_app/dart_test.yaml
+++ b/washee_app/dart_test.yaml
@@ -8,7 +8,7 @@ tags:
     timeout: 30s
   integrationtest:
     timeout: 2m
-  architechture:
+  architecture:
     timeout: 5s
   
   # Integrationtest types, split up due to their longer runtime
@@ -25,6 +25,8 @@ tags:
 
   # Feature tags
   core:
+    timeout: none
+  features:
     timeout: none
   account:
     timeout: none
