--- a/.github/workflows/2assurance.yml
+++ b/.github/workflows/2assurance.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   assurance:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     #- name: Check a previous run succeeded
@@ -23,6 +23,11 @@ jobs:
     #      core.setFailed('At least one previous event did not succeed. Will not run Assurance Testing because of that.')
     # SETUP
     - uses: actions/checkout@v2
+    
+    - uses: KengoTODA/actions-setup-docker-compose@main
+      with:
+        version: '1.29.2'
+    
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
