--- a/.github/workflows/2assurance.yml
+++ b/.github/workflows/2assurance.yml
@@ -38,12 +38,12 @@ jobs:
     - name: Necessary App environment files
       working-directory: ./washee_app
       run: |
-        echo "WEB_API_HOST=http://localhost:8000" > .env.dev
-        echo "BOX_API_HOST=http://localhost:8001" >> .env.dev
-        echo "BOX_WIFI_SSID=boxNetworkName" >> .env.dev
-        echo "BOX_WIFI_PASSWORD=boxNetworkPassword" >> .env.dev
-        echo "BOX_HAS_INTERNET=true" >> .env.dev
-        echo "Necessary production environment to satisfy flutter assets" > .env.prod
+        echo WEB_API_HOST=http://localhost:8000 > .env.dev
+        echo BOX_API_HOST=http://localhost:8001 >> .env.dev
+        echo BOX_WIFI_SSID=boxNetworkName >> .env.dev
+        echo BOX_WIFI_PASSWORD=boxNetworkPassword >> .env.dev
+        echo BOX_HAS_INTERNET=true >> .env.dev
+        echo Necessary production environment to satisfy flutter assets > .env.prod
 
     # SHOULD be a production looking build it starts up instead!
     - name: Startup all containers
@@ -52,7 +52,7 @@ jobs:
 
     # TESTING
 
-    # THIS IS NOT WORKING as of now!
+    # THIS NEEDS a proper setting of environment variables
     - name: Start an Android Emulator and Run App Integration Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
