--- a/.github/workflows/1app_confidence.yml
+++ b/.github/workflows/1app_confidence.yml
@@ -30,12 +30,8 @@ jobs:
     - name: Necessary App environment files
       working-directory: ./washee_app
       run: |
-        echo "WEB_API_HOST=http://localhost:8000" > .env.dev
-        echo "BOX_API_HOST=http://localhost:8001" >> .env.dev
-        echo "BOX_WIFI_SSID=boxNetworkName" >> .env.dev
-        echo "BOX_WIFI_PASSWORD=boxNetworkPassword" >> .env.dev
-        echo "BOX_HAS_INTERNET=true" >> .env.dev
-        echo "Necessary production environment to satisfy flutter assets" > .env.prod
+        echo Necessary development environment to satisfy flutter assets > .env.dev
+        echo Necessary production environment to satisfy flutter assets > .env.prod
 
     # TESTING
 
