Try running CI again

--- a/.github/workflows/2assurance.yml
+++ b/.github/workflows/2assurance.yml
@@ -21,6 +21,7 @@ jobs:
     #  with:
     #    script: |
     #      core.setFailed('At least one previous event did not succeed. Will not run Assurance Testing because of that.')
+
     # SETUP
     - uses: actions/checkout@v2
 
@@ -38,17 +39,12 @@ jobs:
     - name: Necessary App environment files
       working-directory: ./washee_app
       run: |
-        echo WEB_API_HOST=http://localhost:8000 > .env.dev
-        echo BOX_API_HOST=http://localhost:8001 >> .env.dev
+        echo WEB_API_HOST=http://10.0.2.2:8000 > .env.dev
+        echo BOX_API_HOST=http://10.0.2.2:8001 >> .env.dev
         echo BOX_WIFI_SSID=boxNetworkName >> .env.dev
         echo BOX_WIFI_PASSWORD=boxNetworkPassword >> .env.dev
         echo BOX_HAS_INTERNET=true >> .env.dev
         echo Necessary production environment to satisfy flutter assets > .env.prod
-
-    # SHOULD be a production looking build it starts up instead!
-    - name: Make sure all containers are down
-      run: |
-        docker-compose down -v
     
     - name: Startup all containers
       run: |
@@ -74,6 +70,7 @@ jobs:
 
     # SHOULD be a production looking build it tears down instead!
     - name: Finish testing and Clean Up
+      if: always()
       run: |
         docker-compose down -v
 
