--- a/.github/workflows/2assurance.yml
+++ b/.github/workflows/2assurance.yml
@@ -45,6 +45,10 @@ jobs:
         echo BOX_WIFI_PASSWORD=boxNetworkPassword >> .env.dev
         echo BOX_HAS_INTERNET=true >> .env.dev
         echo Necessary production environment to satisfy flutter assets > .env.prod
+
+    - name: Make sure the containers are closed
+      run: |
+        docker-compose down -v
     
     - name: Startup all containers and load data
       run: |
