--- a/.github/workflows/2assurance.yml
+++ b/.github/workflows/2assurance.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   assurance:
     runs-on: macos-latest
+    timeout-minutes: 30
 
     steps:
     #- name: Check a previous run succeeded
